fixed card alignment

--- a/src/index.css
+++ b/src/index.css
@@ -2,4 +2,9 @@ body {
   margin: 0;
   padding: 0;
   font-family: sans-serif;
+  background: rgb(91, 88, 131);
+}
+
+p {
+  font-size: 20px;
 }
